--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,11 @@ edition = "2018"
 crossterm = "0.17"
 tui = { version = "0.9.5", default-features = false, features = ['crossterm'] }
 unicode-width = "0.1"
+reqwest = { version = "0.10", features = ["json"] }
+tokio = { version = "0.2", features = ["full"] }
+serde = { version = "1.0.114", features = ["derive"] }
+log = "0.4.11"
+fern = "0.6.0"
+chrono = "0.4"
+num-format = "0.4.0"
+config = "0.10.1"
