--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,18 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-crossterm = "0.17"
-tui = { version = "0.9.5", default-features = false, features = ['crossterm'] }
-unicode-width = "0.1"
-reqwest = { version = "0.10", features = ["json"] }
-tokio = { version = "0.2", features = ["full"] }
-serde = { version = "1.0.114", features = ["derive"] }
+url = "2.1.0"
 log = "0.4.11"
 fern = "0.6.0"
 chrono = "0.4"
-num-format = "0.4.0"
 config = "0.10.1"
+crossterm = "0.17"
+serde_json = "1.0"
+native-tls = "0.2.4"
+num-format = "0.4.0"
+unicode-width = "0.1"
+tungstenite = "0.11.0"
+tokio = { version = "0.2", features = ["full"] }
+reqwest = { version = "0.10", features = ["json"] }
+serde = { version = "1.0.114", features = ["derive"] }
+tui = { version = "0.9.5", default-features = false, features = ['crossterm'] }
