--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,9 @@ log = "0.4.11"
 fern = "0.6.0"
 chrono = "0.4"
 config = "0.10.1"
-crossterm = "0.17"
 serde_json = "1.0"
+crossterm = "0.17"
+simsearch = "0.2.1"
 native-tls = "0.2.4"
 num-format = "0.4.0"
 unicode-width = "0.1"
